--- a/mail/static/mail/styles.css
+++ b/mail/static/mail/styles.css
@@ -1,10 +1,13 @@
 textarea {
     min-height: 400px;
 }
-#emails-view .email{
-    border: 1px solid black;
-    display: felx;
-    flex-direction: column;
-    flex-wrap: wrap;
+button.email{
+    border: 1px solid black; /* Green border */
+    color: black; /* White text */
+    padding: 10px 24px; /* Some padding */
+    cursor: pointer; /* Pointer/hand icon */
+    width: 90%; /* Set a width if needed */
+    display: block; /* Make the buttons appear below each other */
     margin-bottom: 10px;
+    text-align: left;
 }
