--- a/mail/static/mail/styles.css
+++ b/mail/static/mail/styles.css
@@ -15,3 +15,14 @@ button.email{
 .btn-sm button{
     border: 1px solid black
 }
+div #email{
+    border: 1px solid black; /* Green border */
+    color: black; /* White text */
+    padding: 10px 24px; /* Some padding */
+    cursor: pointer; /* Pointer/hand icon */
+    width: 90%; /* Set a width if needed */
+    display: block; /* Make the buttons appear below each other */
+    margin-bottom: 10px;
+    text-align: left;
+    background: white; 
+}
